k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: db-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
