k8s/backend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-ns
spec:
  selector:
    app: backend
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: network-policies-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
