k8s/frontend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend-ns
spec:
  selector:
    app: frontend
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: network-policies-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
